[SPR-210] refac: 암장 통계에서 null로 인해 발생할 수 있는 문제 체크 후 수정